bondsql/parser.output
State 25 conflicts: 2 shift/reduce
State 28 conflicts: 6 shift/reduce
State 29 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 66 conflicts: 7 shift/reduce
State 68 conflicts: 2 shift/reduce
State 73 conflicts: 2 shift/reduce
State 76 conflicts: 1 shift/reduce
State 86 conflicts: 4 shift/reduce
State 103 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 194 conflicts: 2 shift/reduce


Grammar

    0 $accept: statement $end

    1 statement: select_statement
    2          | insert_statement
    3          | update_statement
    4          | delete_statement

    5 select_statement: L_SELECT opt_distinct fields_list L_FROM targets_list opt_where opt_orderby opt_groupby
    6                 | L_SELECT opt_distinct fields_list opt_where opt_orderby opt_groupby

    7 insert_statement: L_INSERT L_INTO simple_target opt_fields_list L_VALUES L_LBRACKET fields_list L_RBRACKET

    8 update_statement: L_UPDATE simple_target L_SET set_list opt_where

    9 delete_statement: L_DELETE L_FROM simple_target opt_where

   10 set_list: set_item
   11         | set_item L_COMMA set_list

   12 opt_fields_list: L_LBRACKET fields_list L_RBRACKET
   13                | /* empty */

   14 opt_distinct: L_DISTINCT
   15             | /* empty */

   16 opt_where: L_WHERE where_list
   17          | /* empty */

   18 opt_orderby: L_ORDER L_BY order_fields_list
   19            | /* empty */

   20 order_fields_list: order_field
   21                  | order_field L_COMMA order_fields_list

   22 order_field: field_name
   23            | field_name L_ORDER_ASC
   24            | field_name L_ORDER_DSC

   25 opt_groupby: L_GROUP L_BY fields_list
   26            | /* empty */

   27 fields_list: field
   28            | field L_COMMA fields_list

   29 join_type: L_LEFT L_JOIN
   30          | L_LEFT L_OUTER L_JOIN
   31          | L_RIGHT L_JOIN
   32          | L_RIGHT L_OUTER L_JOIN
   33          | L_FULL L_JOIN
   34          | L_FULL L_OUTER L_JOIN
   35          | L_INNER L_JOIN
   36          | L_JOIN

   37 targets_list: target
   38             | targets_list L_COMMA target
   39             | targets_list join_type target
   40             | targets_list join_type target L_ON where_list

   41 simple_table: L_IDENT

   42 table: simple_table
   43      | select_statement
   44      | L_LBRACKET table L_RBRACKET
   45      | L_IDENT L_LBRACKET fields_list L_RBRACKET
   46      | L_IDENT L_LBRACKET L_RBRACKET

   47 target: table
   48       | table L_AS L_IDENT
   49       | table L_IDENT

   50 simple_target: simple_table
   51              | simple_table L_AS L_IDENT
   52              | simple_table L_IDENT

   53 dotted_name: L_IDENT
   54            | L_IDENT L_DOT dotted_name
   55            | L_IDENT L_DOT L_TIMES

   56 field_name: dotted_name
   57           | L_TIMES
   58           | L_NULL
   59           | L_STRING
   60           | L_UNSPECVAL

   61 field_op: L_MINUS
   62         | L_PLUS
   63         | L_TIMES
   64         | L_DIV

   65 field_raw: field_name
   66          | field_raw field_op field_raw
   67          | select_statement
   68          | L_LBRACKET field_raw L_RBRACKET
   69          | L_IDENT L_LBRACKET fields_list L_RBRACKET
   70          | L_IDENT L_LBRACKET L_RBRACKET

   71 field: field_raw
   72      | field_raw L_AS L_IDENT
   73      | field_raw L_AS L_TEXTUAL
   74      | field_raw param_spec
   75      | field_raw param_spec L_AS L_IDENT

   76 where_list: where_item
   77           | L_NOT where_list
   78           | where_list L_OR where_list
   79           | where_list L_AND where_list
   80           | L_LBRACKET where_list L_RBRACKET

   81 set_item: field L_EQ field

   82 condition_operator: L_EQ
   83                   | L_IS
   84                   | L_IN
   85                   | L_LIKE
   86                   | L_ILIKE
   87                   | L_SIMILAR
   88                   | L_GT
   89                   | L_LT
   90                   | L_GEQ
   91                   | L_LEQ
   92                   | L_DIFF
   93                   | L_REGEXP
   94                   | L_REGEXP_CI
   95                   | L_NOTREGEXP
   96                   | L_NOTREGEXP_CI
   97                   | L_NOT

   98 where_item: field condition_operator field
   99           | field L_BETWEEN field L_AND field
  100           | field L_NOT condition_operator field
  101           | field L_NOT L_BETWEEN field L_AND field
  102           | field L_IS L_NOT field

  103 param_spec: L_LSBRACKET param_spec_list L_RSBRACKET

  104 param_spec_list: param_spec_item
  105                | param_spec_item param_spec_list

  106 param_spec_item: L_PNAME L_EQ L_TEXTUAL
  107                | L_PDESCR L_EQ L_TEXTUAL
  108                | L_PTYPE L_EQ L_TEXTUAL
  109                | L_PISPARAM L_EQ L_TEXTUAL
  110                | L_PNULLOK L_EQ L_TEXTUAL


Terminals, with rules where they appear

$end (0) 0
error (256)
L_SELECT (258) 5 6
L_FROM (259) 5 9
L_WHERE (260) 16
L_AS (261) 48 51 72 73 75
L_ON (262) 40
L_ORDER (263) 18
L_BY (264) 18 25
L_ORDER_ASC (265) 23
L_ORDER_DSC (266) 24
L_DISTINCT (267) 14
L_BETWEEN (268) 99 101
L_IN (269) 84
L_GROUP (270) 25
L_INSERT (271) 7
L_INTO (272) 7
L_VALUES (273) 7
L_UPDATE (274) 8
L_SET (275) 8
L_DOT (276) 54 55
L_COMMA (277) 11 21 28 38
L_NULL (278) 58
L_LBRACKET (279) 7 12 44 45 46 68 69 70 80
L_RBRACKET (280) 7 12 44 45 46 68 69 70 80
L_IDENT (281) 41 45 46 48 49 51 52 53 54 55 69 70 72 75
L_EQ (282) 81 82 106 107 108 109 110
L_IS (283) 83 102
L_LIKE (284) 85
L_ILIKE (285) 86
L_GT (286) 88
L_LT (287) 89
L_GEQ (288) 90
L_LEQ (289) 91
L_DIFF (290) 92
L_REGEXP (291) 93
L_REGEXP_CI (292) 94
L_NOTREGEXP (293) 95
L_NOTREGEXP_CI (294) 96
L_SIMILAR (295) 87
L_NOT (296) 77 97 100 101 102
L_AND (297) 79 99 101
L_OR (298) 78
L_MINUS (299) 61
L_PLUS (300) 62
L_TIMES (301) 55 57 63
L_DIV (302) 64
L_STRING (303) 59
L_TEXTUAL (304) 73 106 107 108 109 110
L_DELETE (305) 9
L_JOIN (306) 29 30 31 32 33 34 35 36
L_INNER (307) 35
L_LEFT (308) 29 30
L_RIGHT (309) 31 32
L_FULL (310) 33 34
L_OUTER (311) 30 32 34
L_LSBRACKET (312) 103
L_RSBRACKET (313) 103
L_PNAME (314) 106
L_PTYPE (315) 108
L_PISPARAM (316) 109
L_PDESCR (317) 107
L_PNULLOK (318) 110
L_UNSPECVAL (319) 60


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
statement (66)
    on left: 1 2 3 4, on right: 0
select_statement (67)
    on left: 5 6, on right: 1 43 67
insert_statement (68)
    on left: 7, on right: 2
update_statement (69)
    on left: 8, on right: 3
delete_statement (70)
    on left: 9, on right: 4
set_list (71)
    on left: 10 11, on right: 8 11
opt_fields_list (72)
    on left: 12 13, on right: 7
opt_distinct (73)
    on left: 14 15, on right: 5 6
opt_where (74)
    on left: 16 17, on right: 5 6 8 9
opt_orderby (75)
    on left: 18 19, on right: 5 6
order_fields_list (76)
    on left: 20 21, on right: 18 21
order_field (77)
    on left: 22 23 24, on right: 20 21
opt_groupby (78)
    on left: 25 26, on right: 5 6
fields_list (79)
    on left: 27 28, on right: 5 6 7 12 25 28 45 69
join_type (80)
    on left: 29 30 31 32 33 34 35 36, on right: 39 40
targets_list (81)
    on left: 37 38 39 40, on right: 5 38 39 40
simple_table (82)
    on left: 41, on right: 42 50 51 52
table (83)
    on left: 42 43 44 45 46, on right: 44 47 48 49
target (84)
    on left: 47 48 49, on right: 37 38 39 40
simple_target (85)
    on left: 50 51 52, on right: 7 8 9
dotted_name (86)
    on left: 53 54 55, on right: 54 56
field_name (87)
    on left: 56 57 58 59 60, on right: 22 23 24 65
field_op (88)
    on left: 61 62 63 64, on right: 66
field_raw (89)
    on left: 65 66 67 68 69 70, on right: 66 68 71 72 73 74 75
field (90)
    on left: 71 72 73 74 75, on right: 27 28 81 98 99 100 101 102
where_list (91)
    on left: 76 77 78 79 80, on right: 16 40 77 78 79 80
set_item (92)
    on left: 81, on right: 10 11
condition_operator (93)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97,
    on right: 98 100
where_item (94)
    on left: 98 99 100 101 102, on right: 76
param_spec (95)
    on left: 103, on right: 74 75
param_spec_list (96)
    on left: 104 105, on right: 103 105
param_spec_item (97)
    on left: 106 107 108 109 110, on right: 104 105


state 0

    0 $accept: . statement $end

    L_SELECT  shift, and go to state 1
    L_INSERT  shift, and go to state 2
    L_UPDATE  shift, and go to state 3
    L_DELETE  shift, and go to state 4

    statement         go to state 5
    select_statement  go to state 6
    insert_statement  go to state 7
    update_statement  go to state 8
    delete_statement  go to state 9


state 1

    5 select_statement: L_SELECT . opt_distinct fields_list L_FROM targets_list opt_where opt_orderby opt_groupby
    6                 | L_SELECT . opt_distinct fields_list opt_where opt_orderby opt_groupby

    L_DISTINCT  shift, and go to state 10

    $default  reduce using rule 15 (opt_distinct)

    opt_distinct  go to state 11


state 2

    7 insert_statement: L_INSERT . L_INTO simple_target opt_fields_list L_VALUES L_LBRACKET fields_list L_RBRACKET

    L_INTO  shift, and go to state 12


state 3

    8 update_statement: L_UPDATE . simple_target L_SET set_list opt_where

    L_IDENT  shift, and go to state 13

    simple_table   go to state 14
    simple_target  go to state 15


state 4

    9 delete_statement: L_DELETE . L_FROM simple_target opt_where

    L_FROM  shift, and go to state 16


state 5

    0 $accept: statement . $end

    $end  shift, and go to state 17


state 6

    1 statement: select_statement .

    $default  reduce using rule 1 (statement)


state 7

    2 statement: insert_statement .

    $default  reduce using rule 2 (statement)


state 8

    3 statement: update_statement .

    $default  reduce using rule 3 (statement)


state 9

    4 statement: delete_statement .

    $default  reduce using rule 4 (statement)


state 10

   14 opt_distinct: L_DISTINCT .

    $default  reduce using rule 14 (opt_distinct)


state 11

    5 select_statement: L_SELECT opt_distinct . fields_list L_FROM targets_list opt_where opt_orderby opt_groupby
    6                 | L_SELECT opt_distinct . fields_list opt_where opt_orderby opt_groupby

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    fields_list       go to state 25
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 29


state 12

    7 insert_statement: L_INSERT L_INTO . simple_target opt_fields_list L_VALUES L_LBRACKET fields_list L_RBRACKET

    L_IDENT  shift, and go to state 13

    simple_table   go to state 14
    simple_target  go to state 30


state 13

   41 simple_table: L_IDENT .

    $default  reduce using rule 41 (simple_table)


state 14

   50 simple_target: simple_table .
   51              | simple_table . L_AS L_IDENT
   52              | simple_table . L_IDENT

    L_AS     shift, and go to state 31
    L_IDENT  shift, and go to state 32

    $default  reduce using rule 50 (simple_target)


state 15

    8 update_statement: L_UPDATE simple_target . L_SET set_list opt_where

    L_SET  shift, and go to state 33


state 16

    9 delete_statement: L_DELETE L_FROM . simple_target opt_where

    L_IDENT  shift, and go to state 13

    simple_table   go to state 14
    simple_target  go to state 34


state 17

    0 $accept: statement $end .

    $default  accept


state 18

   58 field_name: L_NULL .

    $default  reduce using rule 58 (field_name)


state 19

   68 field_raw: L_LBRACKET . field_raw L_RBRACKET

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 35


state 20

   53 dotted_name: L_IDENT .
   54            | L_IDENT . L_DOT dotted_name
   55            | L_IDENT . L_DOT L_TIMES
   69 field_raw: L_IDENT . L_LBRACKET fields_list L_RBRACKET
   70          | L_IDENT . L_LBRACKET L_RBRACKET

    L_DOT       shift, and go to state 36
    L_LBRACKET  shift, and go to state 37

    $default  reduce using rule 53 (dotted_name)


state 21

   57 field_name: L_TIMES .

    $default  reduce using rule 57 (field_name)


state 22

   59 field_name: L_STRING .

    $default  reduce using rule 59 (field_name)


state 23

   60 field_name: L_UNSPECVAL .

    $default  reduce using rule 60 (field_name)


state 24

   67 field_raw: select_statement .

    $default  reduce using rule 67 (field_raw)


state 25

    5 select_statement: L_SELECT opt_distinct fields_list . L_FROM targets_list opt_where opt_orderby opt_groupby
    6                 | L_SELECT opt_distinct fields_list . opt_where opt_orderby opt_groupby

    L_FROM   shift, and go to state 38
    L_WHERE  shift, and go to state 39

    L_FROM    [reduce using rule 17 (opt_where)]
    L_WHERE   [reduce using rule 17 (opt_where)]
    $default  reduce using rule 17 (opt_where)

    opt_where  go to state 40


state 26

   56 field_name: dotted_name .

    $default  reduce using rule 56 (field_name)


state 27

   65 field_raw: field_name .

    $default  reduce using rule 65 (field_raw)


state 28

   66 field_raw: field_raw . field_op field_raw
   71 field: field_raw .
   72      | field_raw . L_AS L_IDENT
   73      | field_raw . L_AS L_TEXTUAL
   74      | field_raw . param_spec
   75      | field_raw . param_spec L_AS L_IDENT

    L_AS         shift, and go to state 41
    L_MINUS      shift, and go to state 42
    L_PLUS       shift, and go to state 43
    L_TIMES      shift, and go to state 44
    L_DIV        shift, and go to state 45
    L_LSBRACKET  shift, and go to state 46

    L_AS         [reduce using rule 71 (field)]
    L_MINUS      [reduce using rule 71 (field)]
    L_PLUS       [reduce using rule 71 (field)]
    L_TIMES      [reduce using rule 71 (field)]
    L_DIV        [reduce using rule 71 (field)]
    L_LSBRACKET  [reduce using rule 71 (field)]
    $default     reduce using rule 71 (field)

    field_op    go to state 47
    param_spec  go to state 48


state 29

   27 fields_list: field .
   28            | field . L_COMMA fields_list

    L_COMMA  shift, and go to state 49

    L_COMMA   [reduce using rule 27 (fields_list)]
    $default  reduce using rule 27 (fields_list)


state 30

    7 insert_statement: L_INSERT L_INTO simple_target . opt_fields_list L_VALUES L_LBRACKET fields_list L_RBRACKET

    L_LBRACKET  shift, and go to state 50

    $default  reduce using rule 13 (opt_fields_list)

    opt_fields_list  go to state 51


state 31

   51 simple_target: simple_table L_AS . L_IDENT

    L_IDENT  shift, and go to state 52


state 32

   52 simple_target: simple_table L_IDENT .

    $default  reduce using rule 52 (simple_target)


state 33

    8 update_statement: L_UPDATE simple_target L_SET . set_list opt_where

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    set_list          go to state 53
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 54
    set_item          go to state 55


state 34

    9 delete_statement: L_DELETE L_FROM simple_target . opt_where

    L_WHERE  shift, and go to state 39

    $default  reduce using rule 17 (opt_where)

    opt_where  go to state 56


state 35

   66 field_raw: field_raw . field_op field_raw
   68          | L_LBRACKET field_raw . L_RBRACKET

    L_RBRACKET  shift, and go to state 57
    L_MINUS     shift, and go to state 42
    L_PLUS      shift, and go to state 43
    L_TIMES     shift, and go to state 44
    L_DIV       shift, and go to state 45

    field_op  go to state 47


state 36

   54 dotted_name: L_IDENT L_DOT . dotted_name
   55            | L_IDENT L_DOT . L_TIMES

    L_IDENT  shift, and go to state 58
    L_TIMES  shift, and go to state 59

    dotted_name  go to state 60


state 37

   69 field_raw: L_IDENT L_LBRACKET . fields_list L_RBRACKET
   70          | L_IDENT L_LBRACKET . L_RBRACKET

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_RBRACKET   shift, and go to state 61
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    fields_list       go to state 62
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 29


state 38

    5 select_statement: L_SELECT opt_distinct fields_list L_FROM . targets_list opt_where opt_orderby opt_groupby

    L_SELECT    shift, and go to state 1
    L_LBRACKET  shift, and go to state 63
    L_IDENT     shift, and go to state 64

    select_statement  go to state 65
    targets_list      go to state 66
    simple_table      go to state 67
    table             go to state 68
    target            go to state 69


state 39

   16 opt_where: L_WHERE . where_list

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 70
    L_IDENT      shift, and go to state 20
    L_NOT        shift, and go to state 71
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 72
    where_list        go to state 73
    where_item        go to state 74


state 40

    6 select_statement: L_SELECT opt_distinct fields_list opt_where . opt_orderby opt_groupby

    L_ORDER  shift, and go to state 75

    L_ORDER   [reduce using rule 19 (opt_orderby)]
    $default  reduce using rule 19 (opt_orderby)

    opt_orderby  go to state 76


state 41

   72 field: field_raw L_AS . L_IDENT
   73      | field_raw L_AS . L_TEXTUAL

    L_IDENT    shift, and go to state 77
    L_TEXTUAL  shift, and go to state 78


state 42

   61 field_op: L_MINUS .

    $default  reduce using rule 61 (field_op)


state 43

   62 field_op: L_PLUS .

    $default  reduce using rule 62 (field_op)


state 44

   63 field_op: L_TIMES .

    $default  reduce using rule 63 (field_op)


state 45

   64 field_op: L_DIV .

    $default  reduce using rule 64 (field_op)


state 46

  103 param_spec: L_LSBRACKET . param_spec_list L_RSBRACKET

    L_PNAME     shift, and go to state 79
    L_PTYPE     shift, and go to state 80
    L_PISPARAM  shift, and go to state 81
    L_PDESCR    shift, and go to state 82
    L_PNULLOK   shift, and go to state 83

    param_spec_list  go to state 84
    param_spec_item  go to state 85


state 47

   66 field_raw: field_raw field_op . field_raw

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 86


state 48

   74 field: field_raw param_spec .
   75      | field_raw param_spec . L_AS L_IDENT

    L_AS  shift, and go to state 87

    L_AS      [reduce using rule 74 (field)]
    $default  reduce using rule 74 (field)


state 49

   28 fields_list: field L_COMMA . fields_list

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    fields_list       go to state 88
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 29


state 50

   12 opt_fields_list: L_LBRACKET . fields_list L_RBRACKET

    L_SELECT     shift, and go to state 1
    L_NULL       shift, and go to state 18
    L_LBRACKET   shift, and go to state 19
    L_IDENT      shift, and go to state 20
    L_TIMES      shift, and go to state 21
    L_STRING     shift, and go to state 22
    L_UNSPECVAL  shift, and go to state 23

    select_statement  go to state 24
    fields_list       go to state 89
    dotted_name       go to state 26
    field_name        go to state 27
    field_raw         go to state 28
    field             go to state 29


state 51

    7 insert_statement: L_INSERT L_INTO simple_target opt_fields_list . L_VALUES L_LBRACKET fields_list L_RBRACKET

    L_VALUES  shift, and go to state 90


state 52
